Cleanup and use new JEI convenience functions